# TrafficSimulation

./: .gitignore  CMakeLists.txt  README.md  TrafficSimulation.pptx  TrafficSimulation_Presentation.pptx  main.cpp  ~$TrafficSimulation_Presentation.pptx
.claude/: settings.local.json
.github/workflows/: main.yml
analysis/: INTEGRATION.md  README.md  _build_report.py  report.ipynb  requirements.txt
assets/scenarios/: big_city.txt
build-refactor/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  simtests[1]_include.cmake
docs/: PHASE1_Architecture.md  PHASE2_Taxonomie.md  PHASE3_Audit.md  PHASE4_Bugs.md  PHASE5_Metriques.md  PHASE6_Postmortem.md  README.md  Simulation de trafic _ recherche et implémentation.docx  _doc.txt  metriques.csv
src/: Camera.cpp  Camera.hpp  Car.cpp  Car.hpp  IAgent.hpp  Intersection.cpp  Intersection.hpp  Lane.cpp  Lane.hpp  PathFinder.hpp  Perception.cpp  Perception.hpp  Truck.cpp  Truck.hpp  Vehicle.cpp  Vehicle.hpp  World.cpp  World.hpp
src/core/: Color.hpp
src/core/agent/: AgentDebugSnapshot.hpp  BlockReason.hpp  Car.cpp  Car.hpp  IAgent.hpp  Personality.hpp  Truck.cpp  Truck.hpp  TurnIntent.hpp  Vehicle.cpp  Vehicle.hpp
src/core/behavior/: ICarFollowingModel.hpp  IdmModel.cpp  IdmModel.hpp
src/core/intersection/: AimPolicy.cpp  AimPolicy.hpp  ConflictGeometry.hpp  FixedPriorityPolicy.cpp  FixedPriorityPolicy.hpp  IIntersectionPolicy.hpp  Intersection.cpp  Intersection.hpp  IntersectionTypes.hpp  OrcaPolicy.cpp  OrcaPolicy.hpp  P2PPolicy.cpp  P2PPolicy.hpp  PlatooningPolicy.cpp  PlatooningPolicy.hpp  PriorityRightPolicy.cpp  PriorityRightPolicy.hpp  RoundaboutPolicy.cpp  RoundaboutPolicy.hpp  StopPolicy.cpp  StopPolicy.hpp  TrafficLightPolicy.cpp  TrafficLightPolicy.hpp
src/core/math/: Constants.hpp  Rng.hpp  TileCoord.hpp  Vec2.hpp
src/core/metrics/: MetricsCollector.cpp  MetricsCollector.hpp
src/core/pathfinding/: AStarPlanner.hpp
src/core/perception/: Perception.cpp  Perception.hpp
src/core/world/: Lane.cpp  Lane.hpp  World.cpp  World.hpp
src/io/: ScenarioCatalog.cpp  ScenarioCatalog.hpp  ScenarioIO.cpp  ScenarioIO.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/render/: Camera.cpp  Camera.hpp  IRenderer.hpp  NullRenderer.hpp  SfmlInterop.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp
src/sim/: ExperimentRunner.cpp  ExperimentRunner.hpp  McGeometry.cpp  McGeometry.hpp  McLiveSession.cpp  McLiveSession.hpp  ParallelDecisions.cpp  ParallelDecisions.hpp  Spawner.cpp  Spawner.hpp  ThreadPool.cpp  ThreadPool.hpp
tests/: test_astar_uturn.cpp  test_baseline_snapshot.cpp  test_experiment_runner.cpp  test_idm.cpp  test_intersection_policies.cpp  test_metrics.cpp  test_parallel.cpp  test_platoon.cpp  test_scenario_io.cpp  test_scenarios.cpp  test_spawner.cpp  test_threadpool.cpp  test_world.cpp
tools/: benchmark.cpp  build_pptx.py
